src/objects/AcctSeed__Recurring_Billing__c.object
<CustomObject>
    <description>Captures information related to recurring billings associated with customers. A recurring billing is a template for creating billings on a periodic basis.</description>
    <fields>
        <fullName>AcctSeed__Annual_Amount__c</fullName>
        <formula>IF(Text(AcctSeed__Billing_Frequency__c)=&quot;Monthly&quot;, AcctSeed__Total__c * 12,
IF(Text(AcctSeed__Billing_Frequency__c)=&quot;Semi-Annual&quot;, AcctSeed__Total__c * 2,
IF(Text(AcctSeed__Billing_Frequency__c)=&quot;Quarterly&quot;, AcctSeed__Total__c * 4,
IF(Text(AcctSeed__Billing_Frequency__c)=&quot;Weekly&quot;, AcctSeed__Total__c * 52,
IF(Text(AcctSeed__Billing_Frequency__c)=&quot;Bi-weekly&quot;, AcctSeed__Total__c * 26,
AcctSeed__Total__c )))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated annual amount.</inlineHelpText>
        <label>Annual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Frequency__c</fullName>
        <inlineHelpText>Monthly, Quarterly, Semi-Annual, Annual</inlineHelpText>
        <label>Billing Frequency</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Biweekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.AcctSeed__Accounting_Type__c</field>
                <operation>contains</operation>
                <value>Customer, Customer and Vendor</value>
            </filterItems>
            <filterItems>
                <field>Account.AcctSeed__Accounting_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recurring Billings</relationshipLabel>
        <relationshipName>Recurring_Billings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Exclude_From_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Leave this checkbox unchecked so Billings are created from this Recurring Billing when you have automation set up. Check it to exclude Billings from being automatically created.</description>
        <inlineHelpText>Leave this checkbox unchecked so Billings are created from this Recurring Billing when you have automation set up. Check it to exclude Billings from being automatically created.</inlineHelpText>
        <label>Exclude From Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Last_Billing_Date__c</fullName>
        <inlineHelpText>The last date a billing was created.</inlineHelpText>
        <label>Last Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Denotes the associated ledger.</inlineHelpText>
        <label>Ledger</label>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Recurring Billings</relationshipLabel>
        <relationshipName>Recurring_Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Line_Count__c</fullName>
        <inlineHelpText>Number of recurring billing lines associated with this record.</inlineHelpText>
        <label>Line Count</label>
        <summaryForeignKey>AcctSeed__Recurring_Billing_Line__c.AcctSeed__Recurring_Billing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Monthly_Amount__c</fullName>
        <formula>IF(Text(AcctSeed__Billing_Frequency__c)=&quot;Annual&quot;, AcctSeed__Total__c / 12,
IF(Text(AcctSeed__Billing_Frequency__c)=&quot;Semi-Annual&quot;, AcctSeed__Total__c / 6,
IF(Text(AcctSeed__Billing_Frequency__c)=&quot;Quarterly&quot;, AcctSeed__Total__c / 3,
IF(Text(AcctSeed__Billing_Frequency__c)=&quot;Weekly&quot;, AcctSeed__Total__c * 4,
IF(Text(AcctSeed__Billing_Frequency__c)=&quot;Bi-weekly&quot;, AcctSeed__Total__c * 2,
AcctSeed__Total__c )))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated monthly amount.</inlineHelpText>
        <label>Monthly Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Next_Billing_Create__c</fullName>
        <formula>IF(AcctSeed__Next_Billing_Date__c - TODAY() &lt;=7, &quot;Next 7 Days&quot;, 
IF(AcctSeed__Next_Billing_Date__c - TODAY() &lt;=30, &quot;8 To 30 Days&quot;, 
IF(AcctSeed__Next_Billing_Date__c - TODAY() &lt;=60, &quot;31 To 60 Days&quot;, 
IF(AcctSeed__Next_Billing_Date__c - TODAY() &lt;=90, &quot;61 To 90 Days&quot;, 
&quot;Beyond 90 Days&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time frame to create next billing.</inlineHelpText>
        <label>Next Billing Create</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Next_Billing_Date__c</fullName>
        <inlineHelpText>The next date a billing should be created.</inlineHelpText>
        <label>Next Billing Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Recurring Billings</relationshipLabel>
        <relationshipName>Recurring_Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Sales_Tax__c</fullName>
        <inlineHelpText>Summary of the Recurring Billing Lines&apos; Tax Amount fields</inlineHelpText>
        <label>Sales Tax</label>
        <summarizedField>AcctSeed__Recurring_Billing_Line__c.AcctSeed__Tax_Amount__c</summarizedField>
        <summaryForeignKey>AcctSeed__Recurring_Billing_Line__c.AcctSeed__Recurring_Billing__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <inlineHelpText>Determines if the recurring billing should still be used.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Sub_Total__c</fullName>
        <formula>AcctSeed__Total__c - AcctSeed__Sales_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Summary of all the Recurring Billing Lines&apos; Sub-Total fields</inlineHelpText>
        <label>Sub-Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Total__c</fullName>
        <description>Sub-total + Sales Tax; should cross-check of summary of all  Recurring Billing Lines&apos; Total fields</description>
        <label>Total</label>
        <summarizedField>AcctSeed__Recurring_Billing_Line__c.AcctSeed__Total__c</summarizedField>
        <summaryForeignKey>AcctSeed__Recurring_Billing_Line__c.AcctSeed__Recurring_Billing__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Recurring Billing</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Opportunity__c</columns>
        <columns>AcctSeed__Billing_Frequency__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Last_Billing_Date__c</columns>
        <columns>AcctSeed__Next_Billing_Date__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__All_Active</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Billing_Frequency__c</columns>
        <columns>AcctSeed__Next_Billing_Date__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__All_Inactive</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Billing_Frequency__c</columns>
        <columns>AcctSeed__Next_Billing_Date__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>All Inactive</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Automation</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Opportunity__c</columns>
        <columns>AcctSeed__Billing_Frequency__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Last_Billing_Date__c</columns>
        <columns>AcctSeed__Next_Billing_Date__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <columns>AcctSeed__Exclude_From_Automation__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>AcctSeed__Exclude_From_Automation__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Automation</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Automation_Excluded</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Opportunity__c</columns>
        <columns>AcctSeed__Billing_Frequency__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Last_Billing_Date__c</columns>
        <columns>AcctSeed__Next_Billing_Date__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <columns>AcctSeed__Exclude_From_Automation__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>AcctSeed__Exclude_From_Automation__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Automation Excluded</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Create_in_Next_7_Days</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Billing_Frequency__c</columns>
        <columns>AcctSeed__Next_Billing_Date__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Next_Billing_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <label>Create in Next 7 Days</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Recurring Billing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Billings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>